名前を創理に変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeAI - AIプログラミング学習コミュニティ</title>
+    <title>創理 - AIプログラミング学習コミュニティ</title>
     <style>
         :root {
             --primary-color: #4a90e2;
@@ -146,7 +146,7 @@
 
     <header>
         <div class="container">
-            <h1>未来を創る、AIプログラミングを学ぶならCodeAI</h1>
+            <h1>未来を創る、AIプログラミングを学ぶなら創理</h1>
             <p>未経験から最先端へ。仲間と共に成長する、実践型AI学習コミュニティ。</p>
             <a href="#features" class="cta-button">今すぐ学習を始める</a>
         </div>
@@ -154,9 +154,9 @@
 
     <section id="about">
         <div class="container">
-            <h2>CodeAIとは？</h2>
+            <h2>創理とは？</h2>
             <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-                CodeAIは、AI技術を学びたい人々が集まり、知識を共有し、共にプロジェクトに取り組むためのオンラインコミュニティです。
+                創理は、AI技術を学びたい人々が集まり、知識を共有し、共にプロジェクトに取り組むためのオンラインコミュニティです。
                 最新のトレンド、実践的なスキル、そして何よりも共に学ぶ仲間がここにいます。
                 初心者の方も、現役のエンジニアも、AIという共通のテーマで繋がり、次のステップへと進むことができます。
             </p>
@@ -165,7 +165,7 @@
 
     <section id="features">
         <div class="container">
-            <h2>コミュニティの特徴</h2>
+            <h2>コミュニティの特長</h2>
             <div class="features-grid">
                 <div class="feature-item">
                     <h3>エキスパートによるメンタリング</h3>
@@ -203,7 +203,7 @@
         <div class="container">
             <h2>さあ、あなたもAI開発の最前線へ</h2>
             <a href="#" class="cta-button">コミュニティに参加する</a>
-            <p style="margin-top: 30px; font-size: 0.9em;">&copy; 2025 CodeAI. All Rights Reserved.</p>
+            <p style="margin-top: 30px; font-size: 0.9em;">&copy; 2025 創理. All Rights Reserved.</p>
         </div>
     </footer>
 
